[gd_scene load_steps=35 format=3 uid="uid://2blake1fdk83"]

[ext_resource type="PackedScene" uid="uid://cdt3hwudb0k4u" path="res://content/station/station_map.glb" id="1_v6d0o"]
[ext_resource type="Script" uid="uid://bpmkgcaopq04q" path="res://stages/home/home_stage.gd" id="1_wtahi"]
[ext_resource type="PackedScene" uid="uid://dm7quniumx5yd" path="res://content/station/station.glb" id="1_x82a3"]
[ext_resource type="PackedScene" uid="uid://bg22rxxq3pvj8" path="res://content/player/player.tscn" id="2_ng7u4"]
[ext_resource type="PackedScene" uid="uid://bopsk1oifitej" path="res://content/landscape/landscape.tscn" id="3_bfbec"]
[ext_resource type="Material" uid="uid://qth25g6ccp5b" path="res://content/post_process/ps1_post_process_inside_mat.tres" id="3_c287d"]
[ext_resource type="Shader" uid="uid://bsvue2wev3eic" path="res://content/post_process/ps1_pbject_shader.gdshader" id="4_nkb35"]
[ext_resource type="PackedScene" uid="uid://sfecj32s3gw8" path="res://system/mapcreator/map_creator.tscn" id="4_u1iqv"]
[ext_resource type="PackedScene" uid="uid://cve5itu7qoiiu" path="res://content/environment/mountain_pieces/meshes/mountains_17.glb" id="7_cshur"]
[ext_resource type="PackedScene" uid="uid://iuct2eat4i6l" path="res://content/environment/mountain_pieces/meshes/mountains_21.glb" id="8_wx4ic"]
[ext_resource type="PackedScene" uid="uid://4a46d6g5hsqs" path="res://content/computer/computer_screen.tscn" id="11_wtahi"]
[ext_resource type="Script" uid="uid://b5p4attr3nuyn" path="res://content/interactables/interaction.gd" id="12_c287d"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vs8wy"]
size = Vector3(0.64453125, 0.1, 0.30371094)

[sub_resource type="QuadMesh" id="QuadMesh_igoyj"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ViewportTexture" id="ViewportTexture_3fras"]
viewport_path = NodePath("MapCreator")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cshur"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("4_nkb35")
shader_parameter/affine_mapping = false
shader_parameter/scroll_speed = 0.0
shader_parameter/glow = 0.0
shader_parameter/albedo = SubResource("ViewportTexture_3fras")
shader_parameter/tiling = Vector2(1, 1)
shader_parameter/backlight = 0.0
shader_parameter/alpha_scissor = 0.5
shader_parameter/jitter = 0.25
shader_parameter/resolution = Vector2i(320, 240)

[sub_resource type="ViewportTexture" id="ViewportTexture_wtahi"]
viewport_path = NodePath("ScreenViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_igoyj"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("4_nkb35")
shader_parameter/affine_mapping = false
shader_parameter/scroll_speed = 0.0
shader_parameter/glow = 4.0
shader_parameter/albedo = SubResource("ViewportTexture_wtahi")
shader_parameter/tiling = Vector2(1, 1)
shader_parameter/backlight = 0.0
shader_parameter/alpha_scissor = 0.5
shader_parameter/jitter = 0.25
shader_parameter/resolution = Vector2i(640, 360)

[sub_resource type="BoxShape3D" id="BoxShape3D_bfbec"]
size = Vector3(8, 1, 8)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ng7u4"]
sky_top_color = Color(0.6216, 0.7357714, 0.888, 1)
sky_horizon_color = Color(0.9649123, 0.9766082, 1, 1)

[sub_resource type="Sky" id="Sky_dv6hh"]
sky_material = SubResource("ProceduralSkyMaterial_ng7u4")
radiance_size = 0

[sub_resource type="Environment" id="Environment_bfbec"]
background_mode = 2
sky = SubResource("Sky_dv6hh")
ambient_light_source = 3
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.0
tonemap_mode = 4
ssao_enabled = true
ssao_power = 1.218379
ssao_detail = 5.0
ssao_light_affect = 1.0
ssao_ao_channel_affect = 1.0
glow_enabled = true
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_levels/5 = 0.5
glow_intensity = 0.25
glow_bloom = 0.01
glow_blend_mode = 0
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0.25620002, 0.48027337, 0.61, 1)
fog_sun_scatter = 0.5
fog_density = 1.0
fog_depth_curve = 0.4352754
fog_depth_begin = 15.0
fog_depth_end = 23.0

[sub_resource type="Shader" id="Shader_cshur"]
code = "shader_type spatial;
render_mode unshaded, blend_add;

uniform vec4 color : source_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform bool use_second_color = false;
uniform vec4 second_color : source_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float cone_start_width : hint_range(0.0, 1.0, 0.01) = 0.02;
uniform float cone_curve : hint_range(0, 1.0, 0.01) = 0.3;
uniform float beam_sharpness : hint_range(0.01, 1.0, 0.01) = 0.25;
uniform float beam_fade : hint_range(0.1, 10.0, 0.1) = 4.0;
uniform bool use_gradient = false;
uniform sampler2D gradient: source_color, repeat_disable;
uniform float proximity_fade_distance : hint_range(0.0, 4096.0, 0.01) = 0.75;
uniform sampler2D depth_texture : hint_depth_texture, repeat_disable, filter_nearest;

uniform float z_fade_start : hint_range(0.0, 1.0, 0.01) = 0.5;
uniform float z_fade_end : hint_range(0.0, 1.0, 0.01) = 0.8;

uniform bool use_noise = false;
uniform sampler2D noise_texture : source_color, filter_linear_mipmap, repeat_enable;
uniform float noise_scale : hint_range(0.1, 10.0, 0.1) = 1.0;
uniform float noise_intensity : hint_range(0.0, 1.0, 0.01) = 0.5;
uniform vec2 noise_scroll_speed = vec2(0.01, 0.01);
uniform float noise_distortion_intensity : hint_range(0.0, 0.1, 0.001) = 0.01;
uniform vec2 noise_distortion_scroll_speed = vec2(-0.02, -0.01);

varying float z_axis_fade;

void vertex() {
	vec3 local_z = normalize(MODEL_MATRIX[2].xyz);
	vec3 to_camera = normalize(CAMERA_POSITION_WORLD - NODE_POSITION_WORLD);
	vec3 local_x = normalize(cross(to_camera, local_z));
	vec3 local_y = normalize(cross(local_z, local_x));
	
	MODELVIEW_MATRIX = VIEW_MATRIX * mat4(
		vec4(local_x * length(MODEL_MATRIX[0].xyz), 0.0),
		vec4(local_y * length(MODEL_MATRIX[1].xyz), 0.0),
		MODEL_MATRIX[2],
		MODEL_MATRIX[3]
	);

	z_axis_fade = smoothstep(z_fade_end, z_fade_start, abs(dot(to_camera, local_z)));
}

void fragment() {
	vec2 uv = UV;

	vec3 input_color;
	float input_alpha;
	if (use_second_color) {
		input_color = mix(color.rgb, second_color.rgb, uv.y);
		input_alpha = mix(color.a, second_color.a, uv.y);
	} else {
		input_color = color.rgb;
		input_alpha = color.a;
	}
	
	// Calculate cone width at current position along the cone length
	float cone_progress_y = pow(uv.y, 1.0 - cone_curve);
	float width = mix(cone_start_width, 1.0, cone_progress_y);
	float half_width = width * 0.5;
	
	// Create horizontal mask
	float distance_from_center_x = abs(uv.x - 0.5);
	float beam_edge_start = half_width - (half_width * (1.0 - beam_sharpness));
	float horizontal_mask = 1.0 - smoothstep(beam_edge_start, half_width, distance_from_center_x);	

	// Create vertical mask
	float vertical_mask = pow(max(1.0 - uv.y, 0.001), beam_fade);
	vertical_mask *= smoothstep(0.0, cone_start_width * 0.5, uv.y);

	// Overlay gradient
	if (use_gradient) {
		float gradient_coord = distance_from_center_x / half_width;
		float gradient_value = texture(gradient, vec2(gradient_coord, 0.5)).r;
		horizontal_mask *= mix(1.0, gradient_value, 1.0 - (vertical_mask * vertical_mask));
	}
	
	// Overlay noise
	if (use_noise) {
		vec2 distortion_offset = noise_distortion_scroll_speed * TIME + NODE_POSITION_WORLD.xz;
		vec2 distortion_sample = texture(noise_texture, uv * noise_scale + distortion_offset).rg;
		vec2 distortion_uv = uv + (distortion_sample - 0.5) * 2.0 * noise_distortion_intensity;

		vec2 scroll_offset1 = noise_scroll_speed * TIME + NODE_POSITION_WORLD.xz;
		vec2 scroll_offset2 = vec2(-noise_scroll_speed.x * 0.7, noise_scroll_speed.y * 1.3) * TIME + NODE_POSITION_WORLD.xz;
		
		float noise_sample1 = texture(noise_texture, distortion_uv * noise_scale + scroll_offset1).r;
		float noise_sample2 = texture(noise_texture, distortion_uv * noise_scale + scroll_offset2).r;
		float combined_noise = mix(1.0, noise_sample1 * noise_sample2, 1.0 - vertical_mask);

		horizontal_mask *= mix(1.0, combined_noise, noise_intensity);
	}

	ALBEDO = input_color;

	ALPHA *= horizontal_mask * vertical_mask * input_alpha * z_axis_fade;

	// Proximity Fade
	float proximity_depth_tex = textureLod(depth_texture, SCREEN_UV, 0.0).r;
	vec4 proximity_view_pos = INV_PROJECTION_MATRIX * vec4(SCREEN_UV * 2.0 - 1.0, proximity_depth_tex, 1.0);
	proximity_view_pos.xyz /= proximity_view_pos.w;
	ALPHA *= clamp(1.0 - smoothstep(proximity_view_pos.z + proximity_fade_distance, proximity_view_pos.z, VERTEX.z), 0.0, 1.0);
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cshur"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_wx4ic"]
width = 128
noise = SubResource("FastNoiseLite_cshur")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vs8wy"]
render_priority = 0
shader = SubResource("Shader_cshur")
shader_parameter/color = Color(0.85, 0.9675, 1, 0.27058825)
shader_parameter/use_second_color = false
shader_parameter/second_color = Color(1, 1, 1, 1)
shader_parameter/cone_start_width = 0.70999998413008
shader_parameter/cone_curve = 0.50999998860048
shader_parameter/beam_sharpness = 0.6499999854712001
shader_parameter/beam_fade = 1.90000002831228
shader_parameter/use_gradient = false
shader_parameter/proximity_fade_distance = 1.3999999687072
shader_parameter/z_fade_start = 0.7999999821184
shader_parameter/z_fade_end = 0.999999977648
shader_parameter/use_noise = true
shader_parameter/noise_texture = SubResource("NoiseTexture2D_wx4ic")
shader_parameter/noise_scale = 1.8000000268221599
shader_parameter/noise_intensity = 1.0
shader_parameter/noise_scroll_speed = Vector2(0.01, 0.01)
shader_parameter/noise_distortion_intensity = 0.0230000010925
shader_parameter/noise_distortion_scroll_speed = Vector2(-0.02, -0.01)

[sub_resource type="PlaneMesh" id="PlaneMesh_3quio"]
size = Vector2(1.195, 4)
center_offset = Vector3(0, 0, 2)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wx4ic"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vs8wy"]
width = 32
noise = SubResource("FastNoiseLite_wx4ic")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3quio"]
render_priority = 0
shader = SubResource("Shader_cshur")
shader_parameter/color = Color(0.85, 0.9675, 1, 0.1254902)
shader_parameter/use_second_color = false
shader_parameter/second_color = Color(1, 1, 1, 1)
shader_parameter/cone_start_width = 0.70999998413008
shader_parameter/cone_curve = 0.50999998860048
shader_parameter/beam_sharpness = 0.6499999854712001
shader_parameter/beam_fade = 1.90000002831228
shader_parameter/use_gradient = false
shader_parameter/proximity_fade_distance = 1.3999999687072
shader_parameter/z_fade_start = 0.7999999821184
shader_parameter/z_fade_end = 0.999999977648
shader_parameter/use_noise = true
shader_parameter/noise_texture = SubResource("NoiseTexture2D_vs8wy")
shader_parameter/noise_scale = 1.8000000268221599
shader_parameter/noise_intensity = 1.0
shader_parameter/noise_scroll_speed = Vector2(0.01, 0.01)
shader_parameter/noise_distortion_intensity = 0.0230000010925
shader_parameter/noise_distortion_scroll_speed = Vector2(-0.02, -0.01)

[sub_resource type="PlaneMesh" id="PlaneMesh_wtahi"]
size = Vector2(0.44, 4)
center_offset = Vector3(0, 0, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c287d"]
render_priority = 0
shader = SubResource("Shader_cshur")
shader_parameter/color = Color(0.85, 0.9675, 1, 0.1254902)
shader_parameter/use_second_color = false
shader_parameter/second_color = Color(1, 1, 1, 1)
shader_parameter/cone_start_width = 0.70999998413008
shader_parameter/cone_curve = 0.50999998860048
shader_parameter/beam_sharpness = 0.6499999854712001
shader_parameter/beam_fade = 1.90000002831228
shader_parameter/use_gradient = false
shader_parameter/proximity_fade_distance = 1.3999999687072
shader_parameter/z_fade_start = 0.7999999821184
shader_parameter/z_fade_end = 0.999999977648
shader_parameter/use_noise = true
shader_parameter/noise_texture = SubResource("NoiseTexture2D_vs8wy")
shader_parameter/noise_scale = 1.8000000268221599
shader_parameter/noise_intensity = 1.0
shader_parameter/noise_scroll_speed = Vector2(0.01, 0.01)
shader_parameter/noise_distortion_intensity = 0.0230000010925
shader_parameter/noise_distortion_scroll_speed = Vector2(-0.02, -0.01)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wx4ic"]
render_priority = 0
shader = SubResource("Shader_cshur")
shader_parameter/color = Color(1, 0.89, 0.66999996, 0.18039216)
shader_parameter/use_second_color = false
shader_parameter/second_color = Color(1, 1, 1, 1)
shader_parameter/cone_start_width = 0.02
shader_parameter/cone_curve = 0.3
shader_parameter/beam_sharpness = 0.25
shader_parameter/beam_fade = 4.0
shader_parameter/use_gradient = false
shader_parameter/proximity_fade_distance = 1.3999999687072
shader_parameter/z_fade_start = 0.7999999821184
shader_parameter/z_fade_end = 0.999999977648
shader_parameter/use_noise = false
shader_parameter/noise_scale = 1.0
shader_parameter/noise_intensity = 0.5
shader_parameter/noise_scroll_speed = Vector2(0.01, 0.01)
shader_parameter/noise_distortion_intensity = 0.01
shader_parameter/noise_distortion_scroll_speed = Vector2(-0.02, -0.01)

[sub_resource type="PlaneMesh" id="PlaneMesh_vs8wy"]

[node name="HomeStage" type="Node3D"]
script = ExtResource("1_wtahi")

[node name="ComputerInteraction" type="Area3D" parent="."]
transform = Transform3D(0.90068305, -0.08586265, -0.42590797, 0, 0.9802781, -0.19762313, 0.4344767, 0.17799582, 0.8829198, 1.5381132, 1.1957633, -2.4427621)
collision_layer = 4
collision_mask = 0
script = ExtResource("12_c287d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ComputerInteraction"]
transform = Transform3D(1.0000004, 0, 2.9802322e-08, 0, 1, 0, -2.9802322e-08, 0, 1.0000004, 0, 0, 0)
shape = SubResource("BoxShape3D_vs8wy")

[node name="ComputerCameraPosition" type="Marker3D" parent="."]
transform = Transform3D(0.87584853, 0.051946763, -0.47978213, 0.0069306972, 0.9927332, 0.12013685, 0.48253632, -0.10854691, 0.8691239, 1.333855, 1.7003944, -2.0285149)

[node name="ComputerCamera" type="Camera3D" parent="."]
transform = Transform3D(0.87584853, 0.051946763, -0.4797821, 0.0069306972, 0.9927332, 0.120136864, 0.48253632, -0.10854691, 0.8691239, 1.333855, 1.7003944, -2.0285149)
fov = 33.4

[node name="PostProcessInside" type="MeshInstance3D" parent="ComputerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.07582846)
material_override = ExtResource("3_c287d")
cast_shadow = 0
mesh = SubResource("QuadMesh_igoyj")

[node name="station_map" parent="." instance=ExtResource("1_v6d0o")]

[node name="Map" parent="station_map" index="0"]
transform = Transform3D(0.7510277, 0.099080294, 0.06304407, 1.2430216e-08, 0.04014125, -0.8215046, -0.3630562, 0.20496012, 0.13041462, -1.3927426, 1.5638545, -2.634082)
material_override = SubResource("ShaderMaterial_cshur")

[node name="station" parent="." instance=ExtResource("1_x82a3")]

[node name="Screen" parent="station" index="2"]
material_override = SubResource("ShaderMaterial_igoyj")

[node name="MainRoomGlass" parent="station" index="18"]
cast_shadow = 0

[node name="Player" parent="." instance=ExtResource("2_ng7u4")]
is_inside = true

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.22697449, -0.36646557)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.32317054, 0)
shape = SubResource("BoxShape3D_bfbec")
debug_color = Color(0, 1.0767158, 1.2595311, 0.41960785)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bfbec")

[node name="Inside" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Inside"]
transform = Transform3D(0.15389828, 0.635316, -0.75676215, 0.01423608, 0.76438123, 0.6446074, 0.9879842, -0.109977305, 0.10859254, 0, 0.9878403, 0)
light_color = Color(0.7933506, 0.9498042, 1, 1)
light_energy = 2.0
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.03
shadow_normal_bias = 5.08
directional_shadow_mode = 1
directional_shadow_split_1 = 0.25
directional_shadow_fade_start = 0.9
directional_shadow_max_distance = 80.0

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Inside/DirectionalLight3D"]
transform = Transform3D(-0.99999994, 0, 1.5211562e-07, 0, 0.9999999, 0, -8.742277e-08, 0, -1.7399999, -2.1123758e-07, 1.1771924, 2.6027052)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_vs8wy")
cast_shadow = 0
mesh = SubResource("PlaneMesh_3quio")
skeleton = NodePath("../../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Inside/DirectionalLight3D"]
transform = Transform3D(-0.99999994, 0, 1.5211562e-07, 0, 0.9999999, 0, -8.742277e-08, 0, -1.7399999, 0.057029843, -2.140841, 3.9842753)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_3quio")
cast_shadow = 0
mesh = SubResource("PlaneMesh_wtahi")
skeleton = NodePath("../../..")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Inside/DirectionalLight3D"]
transform = Transform3D(-0.99999994, 0, 1.5211562e-07, 0, 0.9999999, 0, -8.742277e-08, 0, -1.7399999, -0.22499406, -2.140841, 3.9842753)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_c287d")
cast_shadow = 0
mesh = SubResource("PlaneMesh_wtahi")
skeleton = NodePath("../../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Inside/DirectionalLight3D"]
transform = Transform3D(-0.99999994, 0, 1.5211562e-07, 0, 0.9999999, 0, -8.742277e-08, 0, -1.7399999, -0.55932134, -2.140841, 3.9842753)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_c287d")
cast_shadow = 0
mesh = SubResource("PlaneMesh_wtahi")
skeleton = NodePath("../../..")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="Inside/DirectionalLight3D"]
transform = Transform3D(-0.99999994, 0, 1.5211562e-07, 0, 0.9999999, 0, -8.742277e-08, 0, -1.7399999, -0.9568498, -2.140841, 3.9842753)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_c287d")
cast_shadow = 0
mesh = SubResource("PlaneMesh_wtahi")
skeleton = NodePath("../../..")

[node name="MeshInstance3D11" type="MeshInstance3D" parent="Inside/DirectionalLight3D"]
transform = Transform3D(-0.99999994, 0, 1.5211562e-07, 0, 0.9999999, 0, -8.742277e-08, 0, -1.7399999, 3.01532, -0.3683679, 2.6594634)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_c287d")
cast_shadow = 0
mesh = SubResource("PlaneMesh_wtahi")
skeleton = NodePath("../../..")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="Inside/DirectionalLight3D"]
transform = Transform3D(-0.99999994, 0, 1.5211562e-07, 0, 0.9999999, 0, -8.742277e-08, 0, -1.7399999, 2.8740857, -0.7199667, 2.6594634)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_c287d")
cast_shadow = 0
mesh = SubResource("PlaneMesh_wtahi")
skeleton = NodePath("../../..")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="Inside/DirectionalLight3D"]
transform = Transform3D(-0.99999994, 0, 1.5211562e-07, 0, 0.9999999, 0, -8.742277e-08, 0, -1.7399999, -1.2764311, -2.140841, 3.9842753)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_c287d")
cast_shadow = 0
mesh = SubResource("PlaneMesh_wtahi")
skeleton = NodePath("../../..")

[node name="OmniLight3D" type="OmniLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0897129, -0.17242062)
light_color = Color(0.9461855, 0.9623413, 1, 1)
light_energy = 1.545
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
omni_range = 5.525
omni_attenuation = 1.2

[node name="OmniLight3D2" type="OmniLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5269858, 2.2022789, -2.5968096)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 0.053
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
omni_range = 0.97
omni_attenuation = 1.2

[node name="SpotLight3D" type="SpotLight3D" parent="Inside"]
transform = Transform3D(0.89166325, -0.45236656, 0.017354462, 0, 0.038335517, 0.99926496, -0.4526993, -0.89100784, 0.034182373, -1.4726791, 2.5055842, -2.489844)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 0.2
light_specular = 0.0
light_bake_mode = 0
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
spot_range = 2.12
spot_angle = 74.5

[node name="SpotLight3D2" type="SpotLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -0.9013482, 2.4660547, -1.7270513)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 12.3
light_specular = 0.0
light_bake_mode = 0
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
spot_range = 3.2
spot_attenuation = 1.1
spot_angle = 39.8
spot_angle_attenuation = 3.1383371

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Inside/SpotLight3D2"]
transform = Transform3D(-1, 0, -2.627327e-07, 0, 1, 0, 1.509958e-07, 0, -1.74, -2.482429e-07, 0, -1.6440386)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_wx4ic")
cast_shadow = 0
mesh = SubResource("PlaneMesh_vs8wy")
skeleton = NodePath("../../..")

[node name="SpotLight3D3" type="SpotLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -0.9013482, 2.466055, 1.4162741)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 12.3
light_specular = 0.0
light_bake_mode = 0
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
spot_range = 3.2
spot_attenuation = 1.1
spot_angle = 39.8
spot_angle_attenuation = 3.1383371

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Inside/SpotLight3D3"]
transform = Transform3D(-1, 0, -2.627327e-07, 0, 1, 0, 1.509958e-07, 0, -1.74, -2.482429e-07, 0, -1.6440386)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_wx4ic")
cast_shadow = 0
mesh = SubResource("PlaneMesh_vs8wy")
skeleton = NodePath("../../..")

[node name="SpotLight3D6" type="SpotLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -1.8081928, 2.466055, -0.17745197)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 12.3
light_specular = 0.0
light_bake_mode = 0
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
spot_range = 3.2
spot_attenuation = 1.1
spot_angle = 39.8
spot_angle_attenuation = 3.1383371

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Inside/SpotLight3D6"]
transform = Transform3D(-1, 0, -2.627327e-07, 0, 1, 0, 1.509958e-07, 0, -1.74, -2.482429e-07, 0, -1.6440386)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_wx4ic")
cast_shadow = 0
mesh = SubResource("PlaneMesh_vs8wy")
skeleton = NodePath("../../..")

[node name="SpotLight3D7" type="SpotLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 1.8094839, 2.466055, -0.17745197)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 12.3
light_specular = 0.0
light_bake_mode = 0
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
spot_range = 3.2
spot_attenuation = 1.1
spot_angle = 39.8
spot_angle_attenuation = 3.1383371

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Inside/SpotLight3D7"]
transform = Transform3D(-1, 0, -2.627327e-07, 0, 1, 0, 1.509958e-07, 0, -1.74, -2.482429e-07, 0, -1.6440386)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_wx4ic")
cast_shadow = 0
mesh = SubResource("PlaneMesh_vs8wy")
skeleton = NodePath("../../..")

[node name="SpotLight3D4" type="SpotLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0.92416734, 2.4660547, -1.7270513)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 12.3
light_specular = 0.0
light_bake_mode = 0
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
spot_range = 3.2
spot_attenuation = 1.1
spot_angle = 39.8
spot_angle_attenuation = 3.1383371

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Inside/SpotLight3D4"]
transform = Transform3D(-1, 0, -2.627327e-07, 0, 1, 0, 1.509958e-07, 0, -1.74, -2.482429e-07, 0, -1.6440386)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_wx4ic")
cast_shadow = 0
mesh = SubResource("PlaneMesh_vs8wy")
skeleton = NodePath("../../..")

[node name="SpotLight3D5" type="SpotLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0.92416734, 2.466055, 1.4162741)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 12.3
light_specular = 0.0
light_bake_mode = 0
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
spot_range = 3.2
spot_attenuation = 1.1
spot_angle = 39.8
spot_angle_attenuation = 3.1383371

[node name="MeshInstance3D" type="MeshInstance3D" parent="Inside/SpotLight3D5"]
transform = Transform3D(-1, 0, -2.627327e-07, 0, 1, 0, 1.509958e-07, 0, -1.74, -2.482429e-07, 0, -1.6440386)
sorting_offset = 20.0
material_override = SubResource("ShaderMaterial_wx4ic")
cast_shadow = 0
mesh = SubResource("PlaneMesh_vs8wy")
skeleton = NodePath("../../..")

[node name="OmniLight3D3" type="OmniLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5994296, 1.1079834, 0.732674)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 0.2
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
omni_range = 1.27
omni_attenuation = 1.5

[node name="OmniLight3D4" type="OmniLight3D" parent="Inside"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.4976435, 1.1079834, 0.732674)
light_color = Color(1, 0.835015, 0.61167026, 1)
light_energy = 0.2
shadow_bias = 0.05
shadow_normal_bias = 2.634
shadow_blur = 2.0
omni_range = 1.27
omni_attenuation = 1.5

[node name="Landscape" parent="." instance=ExtResource("3_bfbec")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -262.57645, 0)
visible = false

[node name="Outside" type="Node3D" parent="."]

[node name="mountains_17" parent="Outside" instance=ExtResource("7_cshur")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.759468, -17.115334, 12.332642)

[node name="mountains_21" parent="Outside" instance=ExtResource("8_wx4ic")]
transform = Transform3D(0.421669, 0, 0.90674984, 0, 1, 0, -0.90674984, 0, 0.421669, -36.56733, -3.46978, -44.328667)

[node name="mountains_22" parent="Outside" instance=ExtResource("8_wx4ic")]
transform = Transform3D(0.421669, 0, 0.90674984, 0, 1, 0, -0.90674984, 0, 0.421669, 23.56216, -3.46978, 33.22058)

[node name="MapCreator" parent="." instance=ExtResource("4_u1iqv")]

[node name="ScreenViewport" type="SubViewport" parent="."]
positional_shadow_atlas_size = 0
positional_shadow_atlas_16_bits = false
positional_shadow_atlas_quad_2 = 2
positional_shadow_atlas_quad_3 = 2
size = Vector2i(320, 240)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="ComputerScreen" parent="ScreenViewport" instance=ExtResource("11_wtahi")]

[connection signal="highlight_stopped" from="ComputerInteraction" to="." method="_on_computer_highlight_stopped"]
[connection signal="highlights_started" from="ComputerInteraction" to="." method="_on_computer_highlights_started"]
[connection signal="interacted" from="ComputerInteraction" to="." method="_on_computer_interacted"]
[connection signal="computer_exit_request" from="ScreenViewport/ComputerScreen" to="." method="_on_computer_exit_request"]

[editable path="station_map"]
[editable path="station"]
